--- a/styles/github.scss
+++ b/styles/github.scss
@@ -165,10 +165,26 @@ body {
 }
 
 // Syntax Highlighting
-.hljs-default .hljs {
-  padding: 2em;
-  background: #fff;
-  border-radius: 3px;
-  border-top: 18px solid #D9DCDF;
-  border-radius: 6px;
+.hljs-default {
+  .hljs {
+    padding: 2em;
+    background: #fff;
+    border-radius: 3px;
+    border-top: 25px solid #D9DCDF;
+    border-radius: 6px;
+  }
+  pre {
+    position: relative;
+    &:before {
+      position: absolute;
+      top: 1px;
+      left: 10px;
+      content: "\f052 \f052 \f052 ";
+      font-family: "octicons";
+      font-size: 19px;
+      line-height: 25px;
+      letter-spacing: 0.4em;
+      color: white;
+    }
+  }
 }
