--- a/styles/github.scss
+++ b/styles/github.scss
@@ -1,19 +1,35 @@
 ---
 ---
 
-$light-color: #ECEFF3;
-$border-color: #50A952;
-$text-color: #53585F;
-
 $normal-font: "Source Sans Pro";
+
+{% if site.theme == "light" %}
+// Light Theme
+$theme-background-color: #ECEFF3;
+$theme-text-color: #53585F;
+$theme-header-background-color: #FFF;
+$theme-header-text-color: #969696;
+$theme-border-color: #50A952;
+$theme-code-border-color: #D9DCDF;
+$theme-octicon-color: #52575E;
+{% else %}
+// Dark Theme
+$theme-background-color: #2F3232;
+$theme-text-color: #DCDEE0;
+$theme-header-background-color: #414140;
+$theme-header-text-color: #A0A09F;
+$theme-border-color: #E76938;
+$theme-code-border-color: #5E5E5E;
+$theme-octicon-color: #A6AAA9;
+{% endif %}
 
 body {
   font-family: $normal-font;
 }
 
 .remark-slide {
-  color: $text-color;
-  background-color: $light-color;
+  background-color: $theme-background-color;
+  color: $theme-text-color;
 }
 
 .remark-slide-content {
@@ -39,11 +55,8 @@ body {
     text-align: left;
     font-size: 14px;
     line-height: 24px;
-    background: #fff;
-
-    .octicon-mark-github {
-      color: #989798;
-    }
+    background-color: $theme-header-background-color;
+    color: $theme-header-text-color;
 
     .tagline {
       float: right;
@@ -71,14 +84,13 @@ body {
 
   .mega-octicon {
     font-size: 200px;
-    color: #BEC0C3;
+    color: $theme-octicon-color;
   }
 }
 
 .section-slide {
   padding-left: 25%;
   padding-top: 15%;
-  color: #53585F;
 
   h1 {
     font-weight: bold;
@@ -88,10 +100,10 @@ body {
     float: left;
     margin-left: -20%;
 
-    border: 2px solid $border-color;
+    border: 2px solid $theme-border-color;
     border-radius: 100%;
     padding: 50px;
-    color: #52575E;
+    color: $theme-octicon-color;
   }
 }
 
@@ -104,16 +116,17 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    background-color: #fff;
     font-size: 36px;
     padding: 18px 24px;
+    background-color: $theme-header-background-color;
+    color: $theme-header-text-color;
 
     .octicon {
       float: right;
-
-      border: 1px solid $border-color;
       padding: 18px;
       margin: -4px 0;
+
+      border: 1px solid $theme-border-color;
       border-radius: 100%;
     }
   }
@@ -125,7 +138,7 @@ body {
 }
 
 .column {
-  padding: 36px;
+  margin: 36px;
   text-align: center;
 
   .mega-octicon {
@@ -134,7 +147,7 @@ body {
     line-height: 120px;
     text-align: center;
     display: inline-block;
-    border: 2px solid $border-color;
+    border: 2px solid $theme-border-color;
     margin: -4px 0;
     border-radius: 100%;
   }
@@ -165,26 +178,25 @@ body {
 }
 
 // Syntax Highlighting
-.hljs-default {
-  .hljs {
-    padding: 2em;
-    background: #fff;
-    border-radius: 3px;
-    border-top: 25px solid #D9DCDF;
-    border-radius: 6px;
-  }
-  pre {
-    position: relative;
-    &:before {
-      position: absolute;
-      top: 1px;
-      left: 10px;
-      content: "\f052 \f052 \f052 ";
-      font-family: "octicons";
-      font-size: 19px;
-      line-height: 25px;
-      letter-spacing: 0.4em;
-      color: white;
-    }
+.remark-code.hljs { // chained class name to increase specificity
+  padding: 2em;
+  border-radius: 3px;
+  border-top: 25px solid $theme-code-border-color;
+  border-radius: 6px;
+}
+
+pre {
+  position: relative;
+
+  &:before {
+    position: absolute;
+    top: 1px;
+    left: 10px;
+    content: "\f052 \f052 \f052 ";
+    font-family: "octicons";
+    font-size: 19px;
+    line-height: 25px;
+    letter-spacing: 0.4em;
+    color: white;
   }
 }
